sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:16: error: illegal start of simple expression
} while ()
         ^AlgCocktailSort1:17: error: ')' expected but '}' found.
} 
^