sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  do {
  for (i <- getValueCount()-2 to 0) {
    if (isSmaller(i+1,i)){
      swap(i,i+1)

    }
  }
   for (i <- 0 to getValueCount()-2) {
    if (isSmaller(i+1,i)){
      swap(i,i+1)

    }
  }
} while ()
}